Baby steps. Now using the quarkus vertx redis API that is injected by the quarkus-redis-client extension and not manually managing connections. Minor cleanup based on PR comments. Experiment with configuration.